--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,10 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.2"
     implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
 
-    //Coil
+    // Coil
     implementation("io.coil-kt:coil-compose:2.0.0-rc03")
+
+    // Constraint Layout
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-beta02"
+
 }
