--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunnerArguments clearPackageData: 'true'
+
         vectorDrawables {
             useSupportLibrary true
         }
@@ -46,6 +48,9 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    testOptions {
+        execution 'ANDROIDX_TEST_ORCHESTRATOR'
+    }
 }
 
 dependencies {
@@ -62,6 +67,9 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestUtil 'androidx.test:orchestrator:1.4.1'
+
     // Compose Dependencies
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-beta01"
     implementation "androidx.navigation:navigation-compose:2.5.0-beta01"
@@ -75,11 +83,15 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
 
-    //Dagger-Hilt
+    // Dagger-Hilt
     implementation "com.google.dagger:hilt-android:2.40.5"
     kapt "com.google.dagger:hilt-android-compiler:2.37"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+
+    // Dagger-Hilt Testing
+    androidTestImplementation 'com.google.dagger:hilt-android-compiler:2.37'
+    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.37'
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -92,5 +104,7 @@ dependencies {
 
     // Constraint Layout
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
+
+
 
 }
